sumo/tests/duarouter/trips/errors/vehicle_false_departpos/errors.duarouter
Error: Invalid departpos definition for vehicle ''
Quitting (on error).
